grammaire_y.output
Terminals unused in grammar

   THIS
   SUPER
   RESULT
   MET
   AND
   UNARY


État 53 conflits: 6 décalage/réduction
État 54 conflits: 6 décalage/réduction


Grammaire

    0 $accept: declarationClasse $end

    1 declarationClasse: CLASS name '(' paramsList ')' inherits blocs IS '{' declList '}'

    2 paramsList: /* vide */
    3           | paramsMultiples

    4 paramsMultiples: paramName
    5                | paramName ',' paramsMultiples

    6 paramName: var ':' name

    7 var: ID

    8 name: ID

    9 inherits: /* vide */
   10         | EXTENDS name '(' argumentsList ')'

   11 argumentsList: /* vide */
   12              | argumentsListAux

   13 argumentsListAux: expression ',' argumentsListAux
   14                 | expression

   15 blocs: /* vide */
   16      | '{' blocInstructions '}'

   17 blocInstructions: /* vide */
   18                 | listInstructions
   19                 | listDeclarationVariables IS listInstructions

   20 declList: declChamp
   21         | declMethod
   22         | declChamp declList
   23         | declMethod declList

   24 declChamp: isStatic VAR var ':' type exprInitVar ';'

   25 isStatic: /* vide */
   26         | STATIC

   27 type: ID

   28 exprInitVar: /* vide */
   29            | AFF expression

   30 declMethod: isStaticOrOverride DEF var '(' paramsList ')' isReturn IS '{' blocInstructions '}'

   31 isStaticOrOverride: isStatic
   32                   | OVERRIDE

   33 isReturn: /* vide */
   34         | RETURNS type

   35 expression: selection
   36           | CST
   37           | '(' expression ')'
   38           | '(' AS type ':' expression ')'
   39           | instenciation
   40           | envoiMsg
   41           | exprWithOperator

   42 selection: expression '.' var

   43 instenciation: NEW type '(' argumentsList ')'

   44 envoiMsg: expression '.' ID '(' listAttributs ')'

   45 listAttributs: /* vide */
   46              | listAttributsAux

   47 listAttributsAux: expression
   48                 | expression ',' listAttributs

   49 exprWithOperator: var
   50                 | expression ADD expression
   51                 | expression SUB expression
   52                 | expression MUL expression
   53                 | expression DIV expression
   54                 | expression RELOP expression
   55                 | SUB expression
   56                 | ADD expression

   57 instructions: expression ';'
   58             | '{' blocInstructions '}'
   59             | RETURNS ';'
   60             | affectation
   61             | ifThenElse

   62 listInstructions: instructions
   63                 | instructions listInstructions

   64 listDeclarationVariables: VAR var ':' type exprInitVar ';'

   65 affectation: selection AFF expression ';'
   66            | ID AFF expression ';'

   67 ifThenElse: IF expression THEN instructions ELSE instructions


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'(' (40) 1 10 30 37 38 43 44
')' (41) 1 10 30 37 38 43 44
',' (44) 5 13 48
'.' (46) 42 44
':' (58) 6 24 38 64
';' (59) 24 57 59 64 65 66
'{' (123) 1 16 30 58
'}' (125) 1 16 30 58
error (256)
CLASS (258) 1
IS (259) 1 19 30
EXTENDS (260) 10
STATIC (261) 26
OVERRIDE (262) 32
RETURNS (263) 34 59
DEF (264) 30
THIS (265)
SUPER (266)
RESULT (267)
AS (268) 38
NEW (269) 43
AFF (270) 29 65 66
ADD (271) 50 56
SUB (272) 51 55
MUL (273) 52
DIV (274) 53
IF (275) 67
THEN (276) 67
ELSE (277) 67
ID (278) 7 8 27 44 66
VAR (279) 24 64
CST (280) 36
MET (281)
RELOP (282) 54
UMIN (283)
UPLUS (284)
AND (285)
UNARY (286)


Non-terminaux, suivis des règles où ils apparaissent

$accept (40)
    à gauche: 0
declarationClasse (41)
    à gauche: 1, à droite: 0
paramsList (42)
    à gauche: 2 3, à droite: 1 30
paramsMultiples (43)
    à gauche: 4 5, à droite: 3 5
paramName (44)
    à gauche: 6, à droite: 4 5
var (45)
    à gauche: 7, à droite: 6 24 30 42 49 64
name (46)
    à gauche: 8, à droite: 1 6 10
inherits (47)
    à gauche: 9 10, à droite: 1
argumentsList (48)
    à gauche: 11 12, à droite: 10 43
argumentsListAux (49)
    à gauche: 13 14, à droite: 12 13
blocs (50)
    à gauche: 15 16, à droite: 1
blocInstructions (51)
    à gauche: 17 18 19, à droite: 16 30 58
declList (52)
    à gauche: 20 21 22 23, à droite: 1 22 23
declChamp (53)
    à gauche: 24, à droite: 20 22
isStatic (54)
    à gauche: 25 26, à droite: 24 31
type (55)
    à gauche: 27, à droite: 24 34 38 43 64
exprInitVar (56)
    à gauche: 28 29, à droite: 24 64
declMethod (57)
    à gauche: 30, à droite: 21 23
isStaticOrOverride (58)
    à gauche: 31 32, à droite: 30
isReturn (59)
    à gauche: 33 34, à droite: 30
expression (60)
    à gauche: 35 36 37 38 39 40 41, à droite: 13 14 29 37 38 42 44
    47 48 50 51 52 53 54 55 56 57 65 66 67
selection (61)
    à gauche: 42, à droite: 35 65
instenciation (62)
    à gauche: 43, à droite: 39
envoiMsg (63)
    à gauche: 44, à droite: 40
listAttributs (64)
    à gauche: 45 46, à droite: 44 48
listAttributsAux (65)
    à gauche: 47 48, à droite: 46
exprWithOperator (66)
    à gauche: 49 50 51 52 53 54 55 56, à droite: 41
instructions (67)
    à gauche: 57 58 59 60 61, à droite: 62 63 67
listInstructions (68)
    à gauche: 62 63, à droite: 18 19 63
listDeclarationVariables (69)
    à gauche: 64, à droite: 19
affectation (70)
    à gauche: 65 66, à droite: 60
ifThenElse (71)
    à gauche: 67, à droite: 61


état 0

    0 $accept: . declarationClasse $end

    CLASS  décalage et aller à l'état 1

    declarationClasse  aller à l'état 2


état 1

    1 declarationClasse: CLASS . name '(' paramsList ')' inherits blocs IS '{' declList '}'

    ID  décalage et aller à l'état 3

    name  aller à l'état 4


état 2

    0 $accept: declarationClasse . $end

    $end  décalage et aller à l'état 5


état 3

    8 name: ID .

    $défaut  réduction par utilisation de la règle 8 (name)


état 4

    1 declarationClasse: CLASS name . '(' paramsList ')' inherits blocs IS '{' declList '}'

    '('  décalage et aller à l'état 6


état 5

    0 $accept: declarationClasse $end .

    $défaut  accepter


état 6

    1 declarationClasse: CLASS name '(' . paramsList ')' inherits blocs IS '{' declList '}'

    ID  décalage et aller à l'état 7

    $défaut  réduction par utilisation de la règle 2 (paramsList)

    paramsList       aller à l'état 8
    paramsMultiples  aller à l'état 9
    paramName        aller à l'état 10
    var              aller à l'état 11


état 7

    7 var: ID .

    $défaut  réduction par utilisation de la règle 7 (var)


état 8

    1 declarationClasse: CLASS name '(' paramsList . ')' inherits blocs IS '{' declList '}'

    ')'  décalage et aller à l'état 12


état 9

    3 paramsList: paramsMultiples .

    $défaut  réduction par utilisation de la règle 3 (paramsList)


état 10

    4 paramsMultiples: paramName .
    5                | paramName . ',' paramsMultiples

    ','  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 4 (paramsMultiples)


état 11

    6 paramName: var . ':' name

    ':'  décalage et aller à l'état 14


état 12

    1 declarationClasse: CLASS name '(' paramsList ')' . inherits blocs IS '{' declList '}'

    EXTENDS  décalage et aller à l'état 15

    $défaut  réduction par utilisation de la règle 9 (inherits)

    inherits  aller à l'état 16


état 13

    5 paramsMultiples: paramName ',' . paramsMultiples

    ID  décalage et aller à l'état 7

    paramsMultiples  aller à l'état 17
    paramName        aller à l'état 10
    var              aller à l'état 11


état 14

    6 paramName: var ':' . name

    ID  décalage et aller à l'état 3

    name  aller à l'état 18


état 15

   10 inherits: EXTENDS . name '(' argumentsList ')'

    ID  décalage et aller à l'état 3

    name  aller à l'état 19


état 16

    1 declarationClasse: CLASS name '(' paramsList ')' inherits . blocs IS '{' declList '}'

    '{'  décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 15 (blocs)

    blocs  aller à l'état 21


état 17

    5 paramsMultiples: paramName ',' paramsMultiples .

    $défaut  réduction par utilisation de la règle 5 (paramsMultiples)


état 18

    6 paramName: var ':' name .

    $défaut  réduction par utilisation de la règle 6 (paramName)


état 19

   10 inherits: EXTENDS name . '(' argumentsList ')'

    '('  décalage et aller à l'état 22


état 20

   16 blocs: '{' . blocInstructions '}'

    RETURNS  décalage et aller à l'état 23
    NEW      décalage et aller à l'état 24
    ADD      décalage et aller à l'état 25
    SUB      décalage et aller à l'état 26
    IF       décalage et aller à l'état 27
    ID       décalage et aller à l'état 28
    VAR      décalage et aller à l'état 29
    CST      décalage et aller à l'état 30
    '('      décalage et aller à l'état 31
    '{'      décalage et aller à l'état 32

    $défaut  réduction par utilisation de la règle 17 (blocInstructions)

    var                       aller à l'état 33
    blocInstructions          aller à l'état 34
    expression                aller à l'état 35
    selection                 aller à l'état 36
    instenciation             aller à l'état 37
    envoiMsg                  aller à l'état 38
    exprWithOperator          aller à l'état 39
    instructions              aller à l'état 40
    listInstructions          aller à l'état 41
    listDeclarationVariables  aller à l'état 42
    affectation               aller à l'état 43
    ifThenElse                aller à l'état 44


état 21

    1 declarationClasse: CLASS name '(' paramsList ')' inherits blocs . IS '{' declList '}'

    IS  décalage et aller à l'état 45


état 22

   10 inherits: EXTENDS name '(' . argumentsList ')'

    NEW  décalage et aller à l'état 24
    ADD  décalage et aller à l'état 25
    SUB  décalage et aller à l'état 26
    ID   décalage et aller à l'état 7
    CST  décalage et aller à l'état 30
    '('  décalage et aller à l'état 31

    $défaut  réduction par utilisation de la règle 11 (argumentsList)

    var               aller à l'état 33
    argumentsList     aller à l'état 46
    argumentsListAux  aller à l'état 47
    expression        aller à l'état 48
    selection         aller à l'état 49
    instenciation     aller à l'état 37
    envoiMsg          aller à l'état 38
    exprWithOperator  aller à l'état 39


état 23

   59 instructions: RETURNS . ';'

    ';'  décalage et aller à l'état 50


état 24

   43 instenciation: NEW . type '(' argumentsList ')'

    ID  décalage et aller à l'état 51

    type  aller à l'état 52


état 25

   56 exprWithOperator: ADD . expression

    NEW  décalage et aller à l'état 24
    ADD  décalage et aller à l'état 25
    SUB  décalage et aller à l'état 26
    ID   décalage et aller à l'état 7
    CST  décalage et aller à l'état 30
    '('  décalage et aller à l'état 31

    var               aller à l'état 33
    expression        aller à l'état 53
    selection         aller à l'état 49
    instenciation     aller à l'état 37
    envoiMsg          aller à l'état 38
    exprWithOperator  aller à l'état 39


état 26

   55 exprWithOperator: SUB . expression

    NEW  décalage et aller à l'état 24
    ADD  décalage et aller à l'état 25
    SUB  décalage et aller à l'état 26
    ID   décalage et aller à l'état 7
    CST  décalage et aller à l'état 30
    '('  décalage et aller à l'état 31

    var               aller à l'état 33
    expression        aller à l'état 54
    selection         aller à l'état 49
    instenciation     aller à l'état 37
    envoiMsg          aller à l'état 38
    exprWithOperator  aller à l'état 39


état 27

   67 ifThenElse: IF . expression THEN instructions ELSE instructions

    NEW  décalage et aller à l'état 24
    ADD  décalage et aller à l'état 25
    SUB  décalage et aller à l'état 26
    ID   décalage et aller à l'état 7
    CST  décalage et aller à l'état 30
    '('  décalage et aller à l'état 31

    var               aller à l'état 33
    expression        aller à l'état 55
    selection         aller à l'état 49
    instenciation     aller à l'état 37
    envoiMsg          aller à l'état 38
    exprWithOperator  aller à l'état 39


état 28

    7 var: ID .
   66 affectation: ID . AFF expression ';'

    AFF  décalage et aller à l'état 56

    $défaut  réduction par utilisation de la règle 7 (var)


état 29

   64 listDeclarationVariables: VAR . var ':' type exprInitVar ';'

    ID  décalage et aller à l'état 7

    var  aller à l'état 57


état 30

   36 expression: CST .

    $défaut  réduction par utilisation de la règle 36 (expression)


état 31

   37 expression: '(' . expression ')'
   38           | '(' . AS type ':' expression ')'

    AS   décalage et aller à l'état 58
    NEW  décalage et aller à l'état 24
    ADD  décalage et aller à l'état 25
    SUB  décalage et aller à l'état 26
    ID   décalage et aller à l'état 7
    CST  décalage et aller à l'état 30
    '('  décalage et aller à l'état 31

    var               aller à l'état 33
    expression        aller à l'état 59
    selection         aller à l'état 49
    instenciation     aller à l'état 37
    envoiMsg          aller à l'état 38
    exprWithOperator  aller à l'état 39


état 32

   58 instructions: '{' . blocInstructions '}'

    RETURNS  décalage et aller à l'état 23
    NEW      décalage et aller à l'état 24
    ADD      décalage et aller à l'état 25
    SUB      décalage et aller à l'état 26
    IF       décalage et aller à l'état 27
    ID       décalage et aller à l'état 28
    VAR      décalage et aller à l'état 29
    CST      décalage et aller à l'état 30
    '('      décalage et aller à l'état 31
    '{'      décalage et aller à l'état 32

    $défaut  réduction par utilisation de la règle 17 (blocInstructions)

    var                       aller à l'état 33
    blocInstructions          aller à l'état 60
    expression                aller à l'état 35
    selection                 aller à l'état 36
    instenciation             aller à l'état 37
    envoiMsg                  aller à l'état 38
    exprWithOperator          aller à l'état 39
    instructions              aller à l'état 40
    listInstructions          aller à l'état 41
    listDeclarationVariables  aller à l'état 42
    affectation               aller à l'état 43
    ifThenElse                aller à l'état 44


état 33

   49 exprWithOperator: var .

    $défaut  réduction par utilisation de la règle 49 (exprWithOperator)


état 34

   16 blocs: '{' blocInstructions . '}'

    '}'  décalage et aller à l'état 61


état 35

   42 selection: expression . '.' var
   44 envoiMsg: expression . '.' ID '(' listAttributs ')'
   50 exprWithOperator: expression . ADD expression
   51                 | expression . SUB expression
   52                 | expression . MUL expression
   53                 | expression . DIV expression
   54                 | expression . RELOP expression
   57 instructions: expression . ';'

    ADD    décalage et aller à l'état 62
    SUB    décalage et aller à l'état 63
    MUL    décalage et aller à l'état 64
    DIV    décalage et aller à l'état 65
    RELOP  décalage et aller à l'état 66
    '.'    décalage et aller à l'état 67
    ';'    décalage et aller à l'état 68


état 36

   35 expression: selection .
   65 affectation: selection . AFF expression ';'

    AFF  décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 35 (expression)


état 37

   39 expression: instenciation .

    $défaut  réduction par utilisation de la règle 39 (expression)


état 38

   40 expression: envoiMsg .

    $défaut  réduction par utilisation de la règle 40 (expression)


état 39

   41 expression: exprWithOperator .

    $défaut  réduction par utilisation de la règle 41 (expression)


état 40

   62 listInstructions: instructions .
   63                 | instructions . listInstructions

    RETURNS  décalage et aller à l'état 23
    NEW      décalage et aller à l'état 24
    ADD      décalage et aller à l'état 25
    SUB      décalage et aller à l'état 26
    IF       décalage et aller à l'état 27
    ID       décalage et aller à l'état 28
    CST      décalage et aller à l'état 30
    '('      décalage et aller à l'état 31
    '{'      décalage et aller à l'état 32

    $défaut  réduction par utilisation de la règle 62 (listInstructions)

    var               aller à l'état 33
    expression        aller à l'état 35
    selection         aller à l'état 36
    instenciation     aller à l'état 37
    envoiMsg          aller à l'état 38
    exprWithOperator  aller à l'état 39
    instructions      aller à l'état 40
    listInstructions  aller à l'état 70
    affectation       aller à l'état 43
    ifThenElse        aller à l'état 44


état 41

   18 blocInstructions: listInstructions .

    $défaut  réduction par utilisation de la règle 18 (blocInstructions)


état 42

   19 blocInstructions: listDeclarationVariables . IS listInstructions

    IS  décalage et aller à l'état 71


état 43

   60 instructions: affectation .

    $défaut  réduction par utilisation de la règle 60 (instructions)


état 44

   61 instructions: ifThenElse .

    $défaut  réduction par utilisation de la règle 61 (instructions)


état 45

    1 declarationClasse: CLASS name '(' paramsList ')' inherits blocs IS . '{' declList '}'

    '{'  décalage et aller à l'état 72


état 46

   10 inherits: EXTENDS name '(' argumentsList . ')'

    ')'  décalage et aller à l'état 73


état 47

   12 argumentsList: argumentsListAux .

    $défaut  réduction par utilisation de la règle 12 (argumentsList)


état 48

   13 argumentsListAux: expression . ',' argumentsListAux
   14                 | expression .
   42 selection: expression . '.' var
   44 envoiMsg: expression . '.' ID '(' listAttributs ')'
   50 exprWithOperator: expression . ADD expression
   51                 | expression . SUB expression
   52                 | expression . MUL expression
   53                 | expression . DIV expression
   54                 | expression . RELOP expression

    ADD    décalage et aller à l'état 62
    SUB    décalage et aller à l'état 63
    MUL    décalage et aller à l'état 64
    DIV    décalage et aller à l'état 65
    RELOP  décalage et aller à l'état 66
    '.'    décalage et aller à l'état 67
    ','    décalage et aller à l'état 74

    $défaut  réduction par utilisation de la règle 14 (argumentsListAux)


état 49

   35 expression: selection .

    $défaut  réduction par utilisation de la règle 35 (expression)


état 50

   59 instructions: RETURNS ';' .

    $défaut  réduction par utilisation de la règle 59 (instructions)


état 51

   27 type: ID .

    $défaut  réduction par utilisation de la règle 27 (type)


état 52

   43 instenciation: NEW type . '(' argumentsList ')'

    '('  décalage et aller à l'état 75


état 53

   42 selection: expression . '.' var
   44 envoiMsg: expression . '.' ID '(' listAttributs ')'
   50 exprWithOperator: expression . ADD expression
   51                 | expression . SUB expression
   52                 | expression . MUL expression
   53                 | expression . DIV expression
   54                 | expression . RELOP expression
   56                 | ADD expression .

    ADD    décalage et aller à l'état 62
    SUB    décalage et aller à l'état 63
    MUL    décalage et aller à l'état 64
    DIV    décalage et aller à l'état 65
    RELOP  décalage et aller à l'état 66
    '.'    décalage et aller à l'état 67

    ADD       [réduction par utilisation de la règle 56 (exprWithOperator)]
    SUB       [réduction par utilisation de la règle 56 (exprWithOperator)]
    MUL       [réduction par utilisation de la règle 56 (exprWithOperator)]
    DIV       [réduction par utilisation de la règle 56 (exprWithOperator)]
    RELOP     [réduction par utilisation de la règle 56 (exprWithOperator)]
    '.'       [réduction par utilisation de la règle 56 (exprWithOperator)]
    $défaut  réduction par utilisation de la règle 56 (exprWithOperator)


état 54

   42 selection: expression . '.' var
   44 envoiMsg: expression . '.' ID '(' listAttributs ')'
   50 exprWithOperator: expression . ADD expression
   51                 | expression . SUB expression
   52                 | expression . MUL expression
   53                 | expression . DIV expression
   54                 | expression . RELOP expression
   55                 | SUB expression .

    ADD    décalage et aller à l'état 62
    SUB    décalage et aller à l'état 63
    MUL    décalage et aller à l'état 64
    DIV    décalage et aller à l'état 65
    RELOP  décalage et aller à l'état 66
    '.'    décalage et aller à l'état 67

    ADD       [réduction par utilisation de la règle 55 (exprWithOperator)]
    SUB       [réduction par utilisation de la règle 55 (exprWithOperator)]
    MUL       [réduction par utilisation de la règle 55 (exprWithOperator)]
    DIV       [réduction par utilisation de la règle 55 (exprWithOperator)]
    RELOP     [réduction par utilisation de la règle 55 (exprWithOperator)]
    '.'       [réduction par utilisation de la règle 55 (exprWithOperator)]
    $défaut  réduction par utilisation de la règle 55 (exprWithOperator)


état 55

   42 selection: expression . '.' var
   44 envoiMsg: expression . '.' ID '(' listAttributs ')'
   50 exprWithOperator: expression . ADD expression
   51                 | expression . SUB expression
   52                 | expression . MUL expression
   53                 | expression . DIV expression
   54                 | expression . RELOP expression
   67 ifThenElse: IF expression . THEN instructions ELSE instructions

    ADD    décalage et aller à l'état 62
    SUB    décalage et aller à l'état 63
    MUL    décalage et aller à l'état 64
    DIV    décalage et aller à l'état 65
    THEN   décalage et aller à l'état 76
    RELOP  décalage et aller à l'état 66
    '.'    décalage et aller à l'état 67


état 56

   66 affectation: ID AFF . expression ';'

    NEW  décalage et aller à l'état 24
    ADD  décalage et aller à l'état 25
    SUB  décalage et aller à l'état 26
    ID   décalage et aller à l'état 7
    CST  décalage et aller à l'état 30
    '('  décalage et aller à l'état 31

    var               aller à l'état 33
    expression        aller à l'état 77
    selection         aller à l'état 49
    instenciation     aller à l'état 37
    envoiMsg          aller à l'état 38
    exprWithOperator  aller à l'état 39


état 57

   64 listDeclarationVariables: VAR var . ':' type exprInitVar ';'

    ':'  décalage et aller à l'état 78


état 58

   38 expression: '(' AS . type ':' expression ')'

    ID  décalage et aller à l'état 51

    type  aller à l'état 79


état 59

   37 expression: '(' expression . ')'
   42 selection: expression . '.' var
   44 envoiMsg: expression . '.' ID '(' listAttributs ')'
   50 exprWithOperator: expression . ADD expression
   51                 | expression . SUB expression
   52                 | expression . MUL expression
   53                 | expression . DIV expression
   54                 | expression . RELOP expression

    ADD    décalage et aller à l'état 62
    SUB    décalage et aller à l'état 63
    MUL    décalage et aller à l'état 64
    DIV    décalage et aller à l'état 65
    RELOP  décalage et aller à l'état 66
    '.'    décalage et aller à l'état 67
    ')'    décalage et aller à l'état 80


état 60

   58 instructions: '{' blocInstructions . '}'

    '}'  décalage et aller à l'état 81


état 61

   16 blocs: '{' blocInstructions '}' .

    $défaut  réduction par utilisation de la règle 16 (blocs)


état 62

   50 exprWithOperator: expression ADD . expression

    NEW  décalage et aller à l'état 24
    ADD  décalage et aller à l'état 25
    SUB  décalage et aller à l'état 26
    ID   décalage et aller à l'état 7
    CST  décalage et aller à l'état 30
    '('  décalage et aller à l'état 31

    var               aller à l'état 33
    expression        aller à l'état 82
    selection         aller à l'état 49
    instenciation     aller à l'état 37
    envoiMsg          aller à l'état 38
    exprWithOperator  aller à l'état 39


état 63

   51 exprWithOperator: expression SUB . expression

    NEW  décalage et aller à l'état 24
    ADD  décalage et aller à l'état 25
    SUB  décalage et aller à l'état 26
    ID   décalage et aller à l'état 7
    CST  décalage et aller à l'état 30
    '('  décalage et aller à l'état 31

    var               aller à l'état 33
    expression        aller à l'état 83
    selection         aller à l'état 49
    instenciation     aller à l'état 37
    envoiMsg          aller à l'état 38
    exprWithOperator  aller à l'état 39


état 64

   52 exprWithOperator: expression MUL . expression

    NEW  décalage et aller à l'état 24
    ADD  décalage et aller à l'état 25
    SUB  décalage et aller à l'état 26
    ID   décalage et aller à l'état 7
    CST  décalage et aller à l'état 30
    '('  décalage et aller à l'état 31

    var               aller à l'état 33
    expression        aller à l'état 84
    selection         aller à l'état 49
    instenciation     aller à l'état 37
    envoiMsg          aller à l'état 38
    exprWithOperator  aller à l'état 39


état 65

   53 exprWithOperator: expression DIV . expression

    NEW  décalage et aller à l'état 24
    ADD  décalage et aller à l'état 25
    SUB  décalage et aller à l'état 26
    ID   décalage et aller à l'état 7
    CST  décalage et aller à l'état 30
    '('  décalage et aller à l'état 31

    var               aller à l'état 33
    expression        aller à l'état 85
    selection         aller à l'état 49
    instenciation     aller à l'état 37
    envoiMsg          aller à l'état 38
    exprWithOperator  aller à l'état 39


état 66

   54 exprWithOperator: expression RELOP . expression

    NEW  décalage et aller à l'état 24
    ADD  décalage et aller à l'état 25
    SUB  décalage et aller à l'état 26
    ID   décalage et aller à l'état 7
    CST  décalage et aller à l'état 30
    '('  décalage et aller à l'état 31

    var               aller à l'état 33
    expression        aller à l'état 86
    selection         aller à l'état 49
    instenciation     aller à l'état 37
    envoiMsg          aller à l'état 38
    exprWithOperator  aller à l'état 39


état 67

   42 selection: expression '.' . var
   44 envoiMsg: expression '.' . ID '(' listAttributs ')'

    ID  décalage et aller à l'état 87

    var  aller à l'état 88


état 68

   57 instructions: expression ';' .

    $défaut  réduction par utilisation de la règle 57 (instructions)


état 69

   65 affectation: selection AFF . expression ';'

    NEW  décalage et aller à l'état 24
    ADD  décalage et aller à l'état 25
    SUB  décalage et aller à l'état 26
    ID   décalage et aller à l'état 7
    CST  décalage et aller à l'état 30
    '('  décalage et aller à l'état 31

    var               aller à l'état 33
    expression        aller à l'état 89
    selection         aller à l'état 49
    instenciation     aller à l'état 37
    envoiMsg          aller à l'état 38
    exprWithOperator  aller à l'état 39


état 70

   63 listInstructions: instructions listInstructions .

    $défaut  réduction par utilisation de la règle 63 (listInstructions)


état 71

   19 blocInstructions: listDeclarationVariables IS . listInstructions

    RETURNS  décalage et aller à l'état 23
    NEW      décalage et aller à l'état 24
    ADD      décalage et aller à l'état 25
    SUB      décalage et aller à l'état 26
    IF       décalage et aller à l'état 27
    ID       décalage et aller à l'état 28
    CST      décalage et aller à l'état 30
    '('      décalage et aller à l'état 31
    '{'      décalage et aller à l'état 32

    var               aller à l'état 33
    expression        aller à l'état 35
    selection         aller à l'état 36
    instenciation     aller à l'état 37
    envoiMsg          aller à l'état 38
    exprWithOperator  aller à l'état 39
    instructions      aller à l'état 40
    listInstructions  aller à l'état 90
    affectation       aller à l'état 43
    ifThenElse        aller à l'état 44


état 72

    1 declarationClasse: CLASS name '(' paramsList ')' inherits blocs IS '{' . declList '}'

    STATIC    décalage et aller à l'état 91
    OVERRIDE  décalage et aller à l'état 92

    $défaut  réduction par utilisation de la règle 25 (isStatic)

    declList            aller à l'état 93
    declChamp           aller à l'état 94
    isStatic            aller à l'état 95
    declMethod          aller à l'état 96
    isStaticOrOverride  aller à l'état 97


état 73

   10 inherits: EXTENDS name '(' argumentsList ')' .

    $défaut  réduction par utilisation de la règle 10 (inherits)


état 74

   13 argumentsListAux: expression ',' . argumentsListAux

    NEW  décalage et aller à l'état 24
    ADD  décalage et aller à l'état 25
    SUB  décalage et aller à l'état 26
    ID   décalage et aller à l'état 7
    CST  décalage et aller à l'état 30
    '('  décalage et aller à l'état 31

    var               aller à l'état 33
    argumentsListAux  aller à l'état 98
    expression        aller à l'état 48
    selection         aller à l'état 49
    instenciation     aller à l'état 37
    envoiMsg          aller à l'état 38
    exprWithOperator  aller à l'état 39


état 75

   43 instenciation: NEW type '(' . argumentsList ')'

    NEW  décalage et aller à l'état 24
    ADD  décalage et aller à l'état 25
    SUB  décalage et aller à l'état 26
    ID   décalage et aller à l'état 7
    CST  décalage et aller à l'état 30
    '('  décalage et aller à l'état 31

    $défaut  réduction par utilisation de la règle 11 (argumentsList)

    var               aller à l'état 33
    argumentsList     aller à l'état 99
    argumentsListAux  aller à l'état 47
    expression        aller à l'état 48
    selection         aller à l'état 49
    instenciation     aller à l'état 37
    envoiMsg          aller à l'état 38
    exprWithOperator  aller à l'état 39


état 76

   67 ifThenElse: IF expression THEN . instructions ELSE instructions

    RETURNS  décalage et aller à l'état 23
    NEW      décalage et aller à l'état 24
    ADD      décalage et aller à l'état 25
    SUB      décalage et aller à l'état 26
    IF       décalage et aller à l'état 27
    ID       décalage et aller à l'état 28
    CST      décalage et aller à l'état 30
    '('      décalage et aller à l'état 31
    '{'      décalage et aller à l'état 32

    var               aller à l'état 33
    expression        aller à l'état 35
    selection         aller à l'état 36
    instenciation     aller à l'état 37
    envoiMsg          aller à l'état 38
    exprWithOperator  aller à l'état 39
    instructions      aller à l'état 100
    affectation       aller à l'état 43
    ifThenElse        aller à l'état 44


état 77

   42 selection: expression . '.' var
   44 envoiMsg: expression . '.' ID '(' listAttributs ')'
   50 exprWithOperator: expression . ADD expression
   51                 | expression . SUB expression
   52                 | expression . MUL expression
   53                 | expression . DIV expression
   54                 | expression . RELOP expression
   66 affectation: ID AFF expression . ';'

    ADD    décalage et aller à l'état 62
    SUB    décalage et aller à l'état 63
    MUL    décalage et aller à l'état 64
    DIV    décalage et aller à l'état 65
    RELOP  décalage et aller à l'état 66
    '.'    décalage et aller à l'état 67
    ';'    décalage et aller à l'état 101


état 78

   64 listDeclarationVariables: VAR var ':' . type exprInitVar ';'

    ID  décalage et aller à l'état 51

    type  aller à l'état 102


état 79

   38 expression: '(' AS type . ':' expression ')'

    ':'  décalage et aller à l'état 103


état 80

   37 expression: '(' expression ')' .

    $défaut  réduction par utilisation de la règle 37 (expression)


état 81

   58 instructions: '{' blocInstructions '}' .

    $défaut  réduction par utilisation de la règle 58 (instructions)


état 82

   42 selection: expression . '.' var
   44 envoiMsg: expression . '.' ID '(' listAttributs ')'
   50 exprWithOperator: expression . ADD expression
   50                 | expression ADD expression .
   51                 | expression . SUB expression
   52                 | expression . MUL expression
   53                 | expression . DIV expression
   54                 | expression . RELOP expression

    MUL  décalage et aller à l'état 64
    DIV  décalage et aller à l'état 65
    '.'  décalage et aller à l'état 67

    $défaut  réduction par utilisation de la règle 50 (exprWithOperator)


état 83

   42 selection: expression . '.' var
   44 envoiMsg: expression . '.' ID '(' listAttributs ')'
   50 exprWithOperator: expression . ADD expression
   51                 | expression . SUB expression
   51                 | expression SUB expression .
   52                 | expression . MUL expression
   53                 | expression . DIV expression
   54                 | expression . RELOP expression

    MUL  décalage et aller à l'état 64
    DIV  décalage et aller à l'état 65
    '.'  décalage et aller à l'état 67

    $défaut  réduction par utilisation de la règle 51 (exprWithOperator)


état 84

   42 selection: expression . '.' var
   44 envoiMsg: expression . '.' ID '(' listAttributs ')'
   50 exprWithOperator: expression . ADD expression
   51                 | expression . SUB expression
   52                 | expression . MUL expression
   52                 | expression MUL expression .
   53                 | expression . DIV expression
   54                 | expression . RELOP expression

    '.'  décalage et aller à l'état 67

    $défaut  réduction par utilisation de la règle 52 (exprWithOperator)


état 85

   42 selection: expression . '.' var
   44 envoiMsg: expression . '.' ID '(' listAttributs ')'
   50 exprWithOperator: expression . ADD expression
   51                 | expression . SUB expression
   52                 | expression . MUL expression
   53                 | expression . DIV expression
   53                 | expression DIV expression .
   54                 | expression . RELOP expression

    '.'  décalage et aller à l'état 67

    $défaut  réduction par utilisation de la règle 53 (exprWithOperator)


état 86

   42 selection: expression . '.' var
   44 envoiMsg: expression . '.' ID '(' listAttributs ')'
   50 exprWithOperator: expression . ADD expression
   51                 | expression . SUB expression
   52                 | expression . MUL expression
   53                 | expression . DIV expression
   54                 | expression . RELOP expression
   54                 | expression RELOP expression .

    ADD  décalage et aller à l'état 62
    SUB  décalage et aller à l'état 63
    MUL  décalage et aller à l'état 64
    DIV  décalage et aller à l'état 65
    '.'  décalage et aller à l'état 67

    RELOP  erreur (non-associative)

    $défaut  réduction par utilisation de la règle 54 (exprWithOperator)


état 87

    7 var: ID .
   44 envoiMsg: expression '.' ID . '(' listAttributs ')'

    '('  décalage et aller à l'état 104

    $défaut  réduction par utilisation de la règle 7 (var)


état 88

   42 selection: expression '.' var .

    $défaut  réduction par utilisation de la règle 42 (selection)


état 89
